<resources>
    <string name="app_name">Catching_Game</string>
    <string name="box">box</string>
    <string name="orange">orange</string>
    <string name="black">black</string>
    <string name="pink">pink</string>
    <string name="score100">Score: 100</string>
    <string name="score">Score: %d</string>
    <string name="startGame">Start Game</string>
    <string name="stopGame">Game Over!</string>
    <string name="highscore">High Score %d</string>
    <string name="tryagain">Try Again!</string>
    <string name="welcomeMessage">Welcome to my game</string>
    <string name="pinkPoints">20 points</string>
    <string name="orangePoints">30 points</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="mute">Mute</string>
    <string name="unmute">unMute</string>
    <string name="switchstoryline">Switch Storyline</string>
    <string name="profile">Profile Saved to a result.txt</string>
    <string name="story">Story</string>
    <string name="super_hero_name">Super Hero Name</string>
    <string name="add">Add</string>
    <string name="share_story">Share Story</string>


</resources>
