<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="193dp"
        android:layout_marginLeft="148dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/up_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/up_button"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/up_button"
        android:id="@+id/down_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:layout_marginTop="-10dp"
        app:layout_constraintTop_toBottomOf="@+id/up_button"
        app:layout_constraintLeft_toRightOf="@+id/up_button"
        android:layout_marginLeft="0dp"
        android:id="@+id/left_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/up_button"
        app:layout_constraintRight_toLeftOf="@+id/up_button"
        android:layout_marginRight="0dp"
        android:id="@+id/right_button"/>

</android.support.constraint.ConstraintLayout>