<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chongtian.catching_game.ShareStory">

    <EditText
        android:id="@+id/superheroName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/super_hero_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="54dp"
        android:layout_marginLeft="65dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/superheroStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/story"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/superheroName"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/superheroName" />

    <Button
        android:id="@+id/addStoryButton"
        android:onClick="addStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/superheroStory"
        app:layout_constraintVertical_bias="0.216"
        android:layout_marginLeft="61dp"
        app:layout_constraintLeft_toLeftOf="@+id/superheroStory" />
</android.support.constraint.ConstraintLayout>
